# chief-joy-officer

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  chainlit.md  docker-compose.yml  evaluate_rag.py  langgraph.json  pyproject.toml  rag.py  studio_example_message.json  tools.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl  store.pckl  store.vectors.pckl
agent/: __init__.py  agent.py  graph.py
agent/memory/: __init__.py  analysis.py  example.py  manager.py
agent/utils/: nodes.py  state.py
data/: short_term.db  short_term.db-shm  short_term.db-wal
docs/: embedding_comparison.csv  evaluation_base_arctic.csv  evaluation_fine-tuned_arctic.csv  evaluation_openai.csv  evaluation_results.csv  evaluation_results.md  evaluation_results.txt  test_questions.md
interfaces/: __init__.py
interfaces/chainlit/: __init__.py  app.py
interfaces/whatsapp/: webhook_endpoint.py  whatsapp_response.py
scripts/: evaluate_finetune_rag.py  evaluate_rag.py  generate_graph_image.py
