[project]
name = "aie5-deploypythonicrag"
version = "0.1.0"
description = "Simple Pythonic RAG App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.0.4",
    "numpy>=2.2.2",
    "openai>=1.59.9",
    "pydantic==2.10.1",
    "pypdf2>=3.0.1",
    "websockets>=14.2",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.19",
    "langchain>=0.1.8",
    "langchain-core>=0.1.23",
    "langchain-community>=0.0.19",
    "langchain-qdrant>=0.2.0",
    "tavily-python>=0.3.1",
    "typing-extensions>=4.9.0",
    "beautifulsoup4==4.13.3",
    "sentence-transformers==3.4.1"
]
