[project]
name = "chief-joy-officer"
version = "0.1.0"
description = "AI-powered Chief Joy Officer for social activity recommendations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=1.3.2",
    "fastapi[standard]>=0.115.6",
    "httpx>=0.27.0",
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "langchain-core>=0.1.27",
    "langgraph>=0.2.60",
    "langchain-openai>=0.2.14",
    "pydantic>=2.10.0",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.1",
    "elevenlabs>=1.50.3",
    "groq>=0.13.1",
    "langchain-groq>=0.2.2",
    "pydantic-settings>=2.7.0",
    "pre-commit>=4.0.1",
    "supabase>=2.11.0",
    "langgraph-checkpoint-duckdb>=2.0.1",
    "duckdb>=1.1.3",
    "qdrant-client>=1.12.1",
    "sentence-transformers>=3.3.1",
    "together>=1.3.10"
]
